Namespace HuffmanskeKapky 
=======
* premenovane na Huffman

Trieda Nacitacka
=======
* premenovana na Loader
* povodne metody odstranene
* vytvorena nova metoda sourceFromFile() - nacita cely subor do stringu 
  a tento string sa moze dat konstruktoru triedy Strom

Funkcia SortedDictionary()
----------- 
* ako uz bolo spomenute, tak metoda bola odstranena a presunuta do triedy
  strom(po novom Tree)
* zbytocne riesi frekvencie v stringu - toto sa tu nemalo riesit
* zbytocne vytvorene velke polia prvky a bafr - stacilo pouzit napr. List
* vtipne a chaoticky riesenie prvych dvoch for-cyklov

Trieda vrchol
=======
* premenovana na Node
* premenne premenovane na angl. nazvy
* premenne nastavene ako privatne a vytvorenie getterov(settery netreba)
* odstraneny interface IComparable - zbytocnost

Konsturktor
-----------
* ma zbytocne vela parametrov a obcas maju posledne 2 premenne(Lsyn, Psyn) 
  "null" hodnotu
* rozdeleny na 2 konstruktory:
    1. vytvori vrchol z vahy a symbolu(znaku)
    2. vytvori vrchol(rodica) z dvoch vrcholov(synov)
* rozdelenim konstruktorov sa nestane, ze volame konstruktor s "null" 
  parametrami
  
Funkcia JeList()
-----------
* premenovana na IsLeaf()
* staci iba jeden return - teda vratit vysledok z podmienky

Staticka funkcia SectiVahy()
-----------
* premenovana na SumFrequencies()
* tato funkcia nemusi mat nic spolocne s aktualnym vrcholom
* vyzera lepsie, ked sa vytiahne  do triedy NodeHelper, ktora je obecnejsia
* v povodnej triede sa nepuzivala - teraz sa pouzije pri 2. kontrukture
  (pravdou je, ze prehladnejsie by bolo scitat frekvencie v kontruktore Node)
  
Funkcia ZvecVahu()
-----------  
* nepouziva sa
* premenovana na IncreaseFrequency()

Funkcia BudeVrcholVlevo()
-----------
* zbytocne vela if a komplikovane na pochopenie
* tato funkcia pomahala pri vytvoreni rodica a spojeni vrcholov(synov) 
  a spravne rozlozenie synov - toto si podla mna ma riesit strom a nie list